# duckdb-primes

./: Cargo.toml  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
test/sql/: primes.test
