[package]
name = "primes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.3.2", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.9"
libduckdb-sys = { version = "1.3.2", features = ["loadable-extension"] }
